# lango

./: .gitignore  IMPLEMENTATION.md  PLAN.md  README.md  fishook.json  pyproject.toml  requirements-dev.txt  requirements.txt
scripts/: sync_requirements.py  sync_version.py
src/lango/: __init__.py
src/lango/cli/: main.py
