[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "lango"
version = "0.1.0"
description = "Structure-aware programming language translator (Python ↔ TypeScript and beyond)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Unlicense" }

authors = [
  { name = "Modularizer", email = "modularizer@gmail.com" }
]

[project.urls]
Homepage = "https://github.com/modularizer/lango"
Repository = "https://github.com/modularizer/lango"
Issues = "https://github.com/modularizer/lango/issues"

keywords = [
  "code-translation",
  "ast",
  "programming-languages",
  "typescript",
  "python",
]

dependencies = [
    "pydantic==2.12.5",
    "pydantic-settings==2.12.0",
    "typer==0.21.1",
    "pytest==9.0.2",
    "pytest-cov==7.0.0",
    "black==26.1.0",
    "ruff==0.15.0",
    "mypy==1.19.1",
]


[project.scripts]
lango = "lango.cli.main:run"


[tool.hatch.build.targets.wheel]
packages = ["src/lango"]


[tool.black]
line-length = 100
target-version = ["py310"]


[tool.ruff]
target-version = "py310"
line-length = 100
select = ["E", "F", "I", "B", "UP"]
ignore = ["E203"]


[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_any_generics = false
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true


[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q"
testpaths = ["tests"]
